--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Vinyls</string>
+    <string name="cover_image">Image del Album</string>
+    <string name="albumestitle">Álbumes</string>
 </resources>
