--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="wip">En Progreso</string>
     <string name="genero">Genero:</string>
     <string name="asociar_canci_n_al_lbum">Asociar Canción al Álbum</string>
+    <string name="coleccionistas">Coleccionistas</string>
 </resources>
