--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="artistas">Artistas</string>
-    <string name="colecciones">Colecciones</string>
+    <string name="colecciones">Coleccionistas</string>
     <string name="crear">Crear</string>
     <string name="crear_album">Crear Album</string>
     <string name="title_activity_artist">ArtistActivity</string>
@@ -22,4 +22,6 @@
     <string name="genero">Genero:</string>
     <string name="asociar_canci_n_al_lbum">Asociar Canción al Álbum</string>
     <string name="coleccionistas">Coleccionistas</string>
+    <string name="volver">Volver</string>
+    <string name="album_s">Albumés</string>
 </resources>
