Se ajustan Pruebas Unitarias a HU - Listas Coleccionistas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,9 @@
     <string name="coleccionistas">Coleccionistas</string>
     <string name="volver">Volver</string>
     <string name="album_s">Albumés</string>
+    <string name="t_tulo" />
+    <string name="fecha" />
+    <string name="cover_url_imagen" />
+    <string name="descripci_n" />
+    <string name="nombre" />
 </resources>
